--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -9,10 +9,12 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="7">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">2.568</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">3</td><td class="num">0</td><td class="num">0</td><td class="num">3.503</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">com.r3pi.shrikhande.testscripts.Test03_PostTitleBodyforUser</td><td><a href="#m0">postTitleBody</a></td><td rowspan="1">1539891768672</td><td rowspan="1">2519</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">com.r3pi.shrikhande.testscripts.Test01_UserAddressDisplayAndCheckEmailFormat</td><td><a href="#m0">showUserEmailAddress</a></td><td rowspan="1">1539949661562</td><td rowspan="1">2202</td></tr><tr class="passedodd"><td rowspan="1">com.r3pi.shrikhande.testscripts.Test02_GetUserPostsAndCheckIDTitleBody</td><td><a href="#m1">checkIDTitleBody</a></td><td rowspan="1">1539949664404</td><td rowspan="1">624</td></tr><tr class="passedeven"><td rowspan="1">com.r3pi.shrikhande.testscripts.Test03_PostTitleBodyforUser</td><td><a href="#m2">postTitleBody</a></td><td rowspan="1">1539949663770</td><td rowspan="1">632</td></tr></tbody>
 </table>
-<h2>Default test</h2><h3 id="m0">com.r3pi.shrikhande.testscripts.Test03_PostTitleBodyforUser#postTitleBody</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Default test</h2><h3 id="m0">com.r3pi.shrikhande.testscripts.Test01_UserAddressDisplayAndCheckEmailFormat#showUserEmailAddress</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">com.r3pi.shrikhande.testscripts.Test02_GetUserPostsAndCheckIDTitleBody#checkIDTitleBody</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m2">com.r3pi.shrikhande.testscripts.Test03_PostTitleBodyforUser#postTitleBody</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
