--- a/test-output/index.html
+++ b/test-output/index.html
@@ -91,7 +91,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">1 method,   1 passed</span>
+                    <span class="method-stats">3 methods,   3 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -102,7 +102,17 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="com.r3pi.shrikhande.testscripts.Test02_GetUserPostsAndCheckIDTitleBody" class="method navigator-link" hash-for-method="checkIDTitleBody">checkIDTitleBody</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
                         <a href="#" panel-name="suite-Default_suite" title="com.r3pi.shrikhande.testscripts.Test03_PostTitleBodyforUser" class="method navigator-link" hash-for-method="postTitleBody">postTitleBody</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="com.r3pi.shrikhande.testscripts.Test01_UserAddressDisplayAndCheckEmailFormat" class="method navigator-link" hash-for-method="showUserEmailAddress">showUserEmailAddress</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -117,6 +127,36 @@
     <div class="wrapper">
       <div class="main-panel-root">
         <div panel-name="suite-Default_suite" class="panel Default_suite">
+          <div class="suite-Default_suite-class-passed">
+            <div class="main-panel-header rounded-window-top">
+              <img src="passed.png"/>
+              <span class="class-name">com.r3pi.shrikhande.testscripts.Test02_GetUserPostsAndCheckIDTitleBody</span>
+            </div> <!-- main-panel-header rounded-window-top -->
+            <div class="main-panel-content rounded-window-bottom">
+              <div class="method">
+                <div class="method-content">
+                  <a name="checkIDTitleBody">
+                  </a> <!-- checkIDTitleBody -->
+                  <span class="method-name">checkIDTitleBody</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+            </div> <!-- main-panel-content rounded-window-bottom -->
+          </div> <!-- suite-Default_suite-class-passed -->
+          <div class="suite-Default_suite-class-passed">
+            <div class="main-panel-header rounded-window-top">
+              <img src="passed.png"/>
+              <span class="class-name">com.r3pi.shrikhande.testscripts.Test01_UserAddressDisplayAndCheckEmailFormat</span>
+            </div> <!-- main-panel-header rounded-window-top -->
+            <div class="main-panel-content rounded-window-bottom">
+              <div class="method">
+                <div class="method-content">
+                  <a name="showUserEmailAddress">
+                  </a> <!-- showUserEmailAddress -->
+                  <span class="method-name">showUserEmailAddress</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+            </div> <!-- main-panel-content rounded-window-bottom -->
+          </div> <!-- suite-Default_suite-class-passed -->
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
@@ -135,7 +175,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">/private/var/folders/58/ztf14sfs155gp1_bgkkl466h0000gn/T/testng-eclipse--1489621763/testng-customsuite.xml</span>
+            <span class="header-content">/private/var/folders/58/ztf14sfs155gp1_bgkkl466h0000gn/T/testng-eclipse--1610032313/testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -144,7 +184,9 @@
 &lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
+      &lt;class name=&quot;com.r3pi.shrikhande.testscripts.Test01_UserAddressDisplayAndCheckEmailFormat&quot;/&gt;
       &lt;class name=&quot;com.r3pi.shrikhande.testscripts.Test03_PostTitleBodyforUser&quot;/&gt;
+      &lt;class name=&quot;com.r3pi.shrikhande.testscripts.Test02_GetUserPostsAndCheckIDTitleBody&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -158,7 +200,7 @@
           <div class="main-panel-content rounded-window-bottom">
             <ul>
               <li>
-                <span class="test-name">Default test (1 class)</span>
+                <span class="test-name">Default test (3 classes)</span>
               </li>
             </ul>
           </div> <!-- main-panel-content rounded-window-bottom -->
@@ -184,16 +226,24 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(1);
+data.addRows(3);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'postTitleBody')
-data.setCell(0, 2, 'com.r3pi.shrikhande.testscripts.Test03_PostTitleBodyforUser')
-data.setCell(0, 3, 2519);
+data.setCell(0, 1, 'showUserEmailAddress')
+data.setCell(0, 2, 'com.r3pi.shrikhande.testscripts.Test01_UserAddressDisplayAndCheckEmailFormat')
+data.setCell(0, 3, 2202);
+data.setCell(1, 0, 1)
+data.setCell(1, 1, 'postTitleBody')
+data.setCell(1, 2, 'com.r3pi.shrikhande.testscripts.Test03_PostTitleBodyforUser')
+data.setCell(1, 3, 632);
+data.setCell(2, 0, 2)
+data.setCell(2, 1, 'checkIDTitleBody')
+data.setCell(2, 2, 'com.r3pi.shrikhande.testscripts.Test02_GetUserPostsAndCheckIDTitleBody')
+data.setCell(2, 3, 624);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 2 seconds</span>
+              <span class="suite-total-time">Total running time: 3 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -219,14 +269,36 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">com.r3pi.shrikhande.testscripts.Test03_PostTitleBodyforUser</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">com.r3pi.shrikhande.testscripts.Test01_UserAddressDisplayAndCheckEmailFormat</div> <!-- chronological-class-name -->
               <div class="configuration-class before">
                 <span class="method-name">setup</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-class before -->
               <div class="test-method">
+                <span class="method-name">showUserEmailAddress</span>
+                <span class="method-start">25 ms</span>
+              </div> <!-- test-method -->
+            </div> <!-- chronological-class -->
+            <div class="chronological-class">
+              <div class="chronological-class-name">com.r3pi.shrikhande.testscripts.Test03_PostTitleBodyforUser</div> <!-- chronological-class-name -->
+              <div class="configuration-class before">
+                <span class="method-name">setup</span>
+                <span class="method-start">2232 ms</span>
+              </div> <!-- configuration-class before -->
+              <div class="test-method">
                 <span class="method-name">postTitleBody</span>
-                <span class="method-start">34 ms</span>
+                <span class="method-start">2233 ms</span>
+              </div> <!-- test-method -->
+            </div> <!-- chronological-class -->
+            <div class="chronological-class">
+              <div class="chronological-class-name">com.r3pi.shrikhande.testscripts.Test02_GetUserPostsAndCheckIDTitleBody</div> <!-- chronological-class-name -->
+              <div class="configuration-class before">
+                <span class="method-name">setup</span>
+                <span class="method-start">2866 ms</span>
+              </div> <!-- configuration-class before -->
+              <div class="test-method">
+                <span class="method-name">checkIDTitleBody</span>
+                <span class="method-start">2867 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
