--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,8 +1,16 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="999590">  <td>18/10/18 21:42:48</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Test03_PostTitleBodyforUser.postTitleBody()[pri:0, instance:com.r3pi.shrikhande.testscripts.Test03_PostTitleBodyforUser@707194ba]">postTitleBody</td> 
-  <td>main@201576232</td>   <td></td> </tr>
-<tr bgcolor="999590">  <td>18/10/18 21:42:48</td>   <td>-27</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Test03_PostTitleBodyforUser.setup()[pri:0, instance:com.r3pi.shrikhande.testscripts.Test03_PostTitleBodyforUser@707194ba]">&gt;&gt;setup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@201576232</td>   <td></td> </tr>
+<tr bgcolor="71e976">  <td>18/10/19 13:47:44</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Test02_GetUserPostsAndCheckIDTitleBody.checkIDTitleBody()[pri:0, instance:com.r3pi.shrikhande.testscripts.Test02_GetUserPostsAndCheckIDTitleBody@385e9564]">checkIDTitleBody</td> 
+  <td>main@1995619265</td>   <td></td> </tr>
+<tr bgcolor="7fb3a0">  <td>18/10/19 13:47:43</td>   <td>-634</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Test03_PostTitleBodyforUser.postTitleBody()[pri:0, instance:com.r3pi.shrikhande.testscripts.Test03_PostTitleBodyforUser@291caca8]">postTitleBody</td> 
+  <td>main@1995619265</td>   <td></td> </tr>
+<tr bgcolor="999590">  <td>18/10/19 13:47:41</td>   <td>-2858</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Test01_UserAddressDisplayAndCheckEmailFormat.setup()[pri:0, instance:com.r3pi.shrikhande.testscripts.Test01_UserAddressDisplayAndCheckEmailFormat@399c4be1]">&gt;&gt;setup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1995619265</td>   <td></td> </tr>
+<tr bgcolor="7fb3a0">  <td>18/10/19 13:47:43</td>   <td>-634</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Test03_PostTitleBodyforUser.setup()[pri:0, instance:com.r3pi.shrikhande.testscripts.Test03_PostTitleBodyforUser@291caca8]">&gt;&gt;setup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1995619265</td>   <td></td> </tr>
+<tr bgcolor="71e976">  <td>18/10/19 13:47:44</td>   <td>-1</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Test02_GetUserPostsAndCheckIDTitleBody.setup()[pri:0, instance:com.r3pi.shrikhande.testscripts.Test02_GetUserPostsAndCheckIDTitleBody@385e9564]">&gt;&gt;setup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1995619265</td>   <td></td> </tr>
+<tr bgcolor="999590">  <td>18/10/19 13:47:41</td>   <td>-2842</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Test01_UserAddressDisplayAndCheckEmailFormat.showUserEmailAddress()[pri:0, instance:com.r3pi.shrikhande.testscripts.Test01_UserAddressDisplayAndCheckEmailFormat@399c4be1]">showUserEmailAddress</td> 
+  <td>main@1995619265</td>   <td></td> </tr>
 </table>
